--- a/Multithread/app/src/main/res/layout/activity_main.xml
+++ b/Multithread/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="400dp"
         android:id="@+id/list_view"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/progress_bar">
 
         </ListView>
