cant change the UI from background thread

--- a/Multithread/app/src/main/res/layout/activity_main.xml
+++ b/Multithread/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:layout_width="300dp"
         android:layout_height="30dp"
         android:id="@+id/progress_bar"
+        android:max="10"
         android:layout_centerHorizontal="true"/>
 
     <ListView
